buildscript {
	ext {
		jjwtVersion = '0.11.5'
		commonLang3Version = '3.13.0'
	}
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
	 id 'jacoco' // bật nếu cần test coverage
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(22)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	/* ==============================
       🔹 SPRING BOOT CORE MODULES
       ============================== */
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework:spring-messaging'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	/* ==============================
       🔹 DATABASE
       ============================== */
	implementation 'mysql:mysql-connector-java:8.0.33'

	/* ==============================
       🔹 LOMBOK & MAPSTRUCT
       ============================== */
	implementation 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	/* ==============================
       🔹 AUTHENTICATION / JWT
       ============================== */
	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

	/* ==============================
       🔹 COMMON UTILITIES
       ============================== */
	implementation "org.apache.commons:commons-lang3:${commonLang3Version}"
	implementation 'io.github.cdimascio:dotenv-java:2.2.4'

	/* ==============================
       🔹 THIRD-PARTY INTEGRATIONS
       ============================== */
	// Firebase OTP login
	implementation 'com.google.firebase:firebase-admin:9.4.3'


	// PayOS payment gateway
	implementation 'vn.payos:payos-java:2.0.1'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework:spring-messaging'

    testImplementation 'com.h2database:h2:2.2.224'


	/* ==============================
       🔹 TESTING
       ============================== */
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
	testImplementation 'org.mockito:mockito-core:5.11.0'
	testImplementation 'org.assertj:assertj-core:3.25.3'

	// UI Testing (optional, cho Selenium/Katalon)
	testImplementation 'org.seleniumhq.selenium:selenium-java:4.25.0'
	implementation 'com.cloudinary:cloudinary-http44:1.32.0'
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed", "standardOut", "standardError"
		showStandardStreams = true
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

/* ==============================
   🔹 OPTIONAL - JACOCO (COVERAGE)
   ============================== */
jacoco {
    toolVersion = "0.8.10"
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}
